--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="drone-portal"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
